[gd_scene load_steps=5 format=3 uid="uid://cd3xd0jf7ieqd"]

[ext_resource type="Theme" uid="uid://cye31hv0ctpt" path="res://UI/mytheme.tres" id="1_6qnti"]
[ext_resource type="Script" path="res://UI/menu.gd" id="1_13su8"]
[ext_resource type="Script" path="res://UI/menubuttonfunc.gd" id="1_fhlrg"]
[ext_resource type="LabelSettings" uid="uid://1kc3p7bicsom" path="res://UI/Myfont.tres" id="1_g6j5w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_13su8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6qnti")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Pixel plunge"
label_settings = ExtResource("1_g6j5w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_fhlrg")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -24.0
offset_right = 105.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -24.0
offset_right = 105.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="HBoxContainer/VBoxContainer/Button" method="_on_pressed_start"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="HBoxContainer/VBoxContainer/Button" method="_on_pressed_exit"]
