[gd_scene load_steps=3 format=3 uid="uid://46q05b4bea11"]

[ext_resource type="Theme" uid="uid://cye31hv0ctpt" path="res://UI/mytheme.tres" id="1_m433m"]
[ext_resource type="Script" path="res://UI/menubuttonfunc.gd" id="1_sga8s"]

[node name="pausescreen" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.294118)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_m433m")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
text = "Continue"
script = ExtResource("1_sga8s")

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
text = "Main menu"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
text = "Restart level"

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="HBoxContainer/VBoxContainer/Button" method="_on_pressed_Contine"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="HBoxContainer/VBoxContainer/Button" method="_on_pressed_Mainmenu"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button3" to="HBoxContainer/VBoxContainer/Button" method="_on_pressed_RestartLevel"]
